# app.js
@@ -44,9 +44,11 @@ app.use((req, res, next) => {
 
 //  import routes
 const piratesRoutes = require("./src/routes/pirates");
+const usersRoutes = require("./src/routes/users");
 // routes
-app.use("/", require("./src/routes"))
+app.use("/", require("./src/routes/index"));
 app.use("/pirates", piratesRoutes);
+app.use("/users", usersRoutes);
 
 // 404 middleware for unknown routes 
 app.use((req, res, next) => {
