# src/routes/index.js
@@ -6,7 +6,7 @@ router.get("/", (req, res) => {
     res.send("<h2>Welcome to the One Piece Pirate Project API!</h2>");
   });
 router.use("/pirates", require("./pirates"));//pirates
-router.use("/ships", require("./ships"));//ships
+router.use("/users", require("./users"));//ships
 //router.use("/weapons", require("./weapons"))
 
 //router.use("/api-docs", require("./swagger"));
